feat(pictograms): add new blockchain category with new pictograms (#6276)
* created new Blockchain category with seven new pictograms

* chore(pictograms): update categories information

* chore(e2e): update snapshots

Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: Alessandra Davila <aledavila@ibm.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -23,6 +23,15 @@ categories:
       - trash
       - upload
       - upload--alt
+  - name: Blockchain
+    members:
+      - connected--ecosystem
+      - consumer--engagement--food--journey
+      - supply--chain--optimization--01
+      - supply--chain--optimization--02
+      - transparency--01
+      - transparency--02
+      - trust
   - name: Building Structure
     members:
       - alarm
