feat(pictograms): add four new industry pictograms (#6282)
* added four new industry pictograms, deleted one that was replaced

* chore(pictograms): update metadata and add deprecated asset

* chore(e2e): update snapshots

Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -326,7 +326,12 @@ categories:
     members:
       - agriculture
       - bulldozer
+      - cheese
       - farm
+      - farm--01
+      - farm--02
+      - farmer--01
+      - farmer--02
       - oil--pump
       - oil--rig
       - power
