feat(pictograms): add automation decision pictogram to networking category (#6285)
* added automation decision picto to networking category

* chore: update metadata

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -428,6 +428,7 @@ categories:
       - tools
   - name: Networking
     members:
+      - automation--decision
       - global--network
       - integration
       - inspect--data
