feat(pictograms): add planning analytics pictogram to cloud category (#6320)
* added planning analytics pictogram to cloud category

* chore(snapshot): update snapshot, resolve merge conflict

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -144,6 +144,7 @@ categories:
       - marketplace
       - mas
       - mqa
+      - planning--analytics
       - saas--enablement
       - single--sign-on
       - softlayer--enablement
