feat(pictograms): add blender pictogram in lifestyle category (#6318)
* added new blender pictogram in lifestyle category

* chore: update metadata and snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: DAK <40970507+dakahn@users.noreply.github.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/pictograms.yml
+++ b/packages/pictograms/pictograms.yml
@@ -110,6 +110,10 @@
   friendly_name: Bicycle
   aliases:
     - bicycle
+- name: blender
+  friendly_name: Blender
+  aliases:
+    - blender
 - name: blockchain
   friendly_name: Blockchain
   aliases:
@@ -1364,14 +1368,14 @@
   friendly_name: Time
   aliases:
     - time
-- name: time-lapse
-  friendly_name: Time lapse
-  aliases:
-    - time
 - name: time--plot
   friendly_name: Time plot
   aliases:
     - time plot
+- name: time-lapse
+  friendly_name: Time lapse
+  aliases:
+    - time
 - name: toggle
   friendly_name: Toggle
   aliases:
