feat(pictograms): add gift pictogram in retail (#6336)
* new cargo pictograms added in industry category

* new gift pictogram in retail category

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -340,6 +340,8 @@ categories:
     members:
       - agriculture
       - bulldozer
+      - cargo--crane
+      - cargo--ship
       - cheese
       - farm
       - farm--01
@@ -491,6 +493,7 @@ categories:
       - coat--hanger
       - credit--card
       - customer--service
+      - gift
       - price
       - receipt
       - shirt
