feat(pictograms): add coronavirus pictogram in Life Science category (#6351)
* new coronavirus pictogram in Life Science category

* chore(pictograms): update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -385,6 +385,7 @@ categories:
   - name: Life Science
     members:
       - cell
+      - coronavirus
       - dna
       - erlenmeyer--flask
       - heart
