feat(pictograms): added 11 new pictograms in multiple categories (#6355)
* added 11 new pictograms in multiple categories

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -43,6 +43,7 @@ categories:
       - escalator--up
       - fire--alarm
       - fire--extinguisher
+      - id--badge
       - office
       - stairs--plan--view
   - name: Cities
@@ -189,6 +190,7 @@ categories:
       - circle-packing
       - code--syntax
       - data--set
+      - employee--insights
       - flow--chart
       - flow--chart--detail
       - heat--map
@@ -278,6 +280,7 @@ categories:
       - police
   - name: File
     members:
+      - document--security
       - duplicate--file
       - envelope
       - file--backup
@@ -395,11 +398,13 @@ categories:
       - microscope
       - mortar--and--pestle
       - petri--culture
+      - research
       - test--tubes
       - virus
   - name: Lifestyle
     members:
       - apple
+      - backpack
       - blender
       - cafe
       - cherries
@@ -410,6 +415,7 @@ categories:
       - perfume
       - scale
       - soft--ice--cream
+      - sports
       - stationary--bicycle
       - tennis
       - yoga--01
@@ -435,6 +441,7 @@ categories:
   - name: Networking
     members:
       - automation--decision
+      - distribution--ledger
       - global--network
       - integration
       - inspect--data
@@ -454,6 +461,8 @@ categories:
       - reset--hybrid--cloud
       - reset--settings
       - support--services
+      - transactional--blockchain
+      - transactional--trust
       - transform
   - name: People
     members:
@@ -497,6 +506,7 @@ categories:
       - customer--service
       - gift
       - price
+      - qr-code
       - receipt
       - shirt
       - shop
@@ -612,6 +622,7 @@ categories:
       - language--translation
       - language--translation--alphabet--a--expanded
       - natural--language--classifier
+      - natural--language--understanding
       - personality--insights
       - question--and--answer
       - relationship--extraction
