feat(pictograms): new contract pictogram in file category (#6368)
* new contract pictogram in file category

* chore(snapshot): update snapshots

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -280,6 +280,7 @@ categories:
       - police
   - name: File
     members:
+      - contract
       - document--security
       - duplicate--file
       - envelope
