feat(pictograms): add new x-ray pictograms to healthcare (#6377)
* add new x-ray pictograms to healthcare

* chore: update snapshots

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: emyarod <emyarod@users.noreply.github.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -323,6 +323,8 @@ categories:
       - pill--bottle--01
       - pills
       - stethoscope
+      - x-ray--01
+      - x-ray--02
   - name: Home
     members:
       - door--handle
