feat(pictograms): add four new pictograms to education category (#6353)
* added four new pictograms to education category

* chore: update snapshots

* fix(pictograms): rename focus to feedback--02

Co-authored-by: emyarod <afw5059@gmail.com>
Co-authored-by: Josh Black <josh@josh.black>
Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/packages/pictograms/categories.yml
+++ b/packages/pictograms/categories.yml
@@ -255,6 +255,10 @@ categories:
     members:
       - college
       - education
+      - feedback--02
+      - goals
+      - growth
+      - insights
       - university
   - name: Electronics
     members:
