feat(stylelint): add stylelint-config-carbon (#6170)
* feat(stylelint): add stylelint-config-carbon

* chore(project): update stylelint ignore to no longer ignore components

* chore(project): update ci-check to include stylelint

* chore(stylelint): add recommended rules and disable problematic ones

* chore(stylelint): update to 13.6.1

* chore(scss): fix stylelint violations

* chore(project): sync offline mirror

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format:diff": "prettier --list-different '**/*.{js,md,scss,ts}' '!**/{build,es,lib,storybook,ts,umd}/**' '!packages/components/**'",
     "lint": "eslint packages actions",
     "lint:docs": "alex 'docs/**/*.md' -q",
-    "lint:styles": "stylelint '**/*.{css,scss}' --config ./packages/stylelint-config-elements",
+    "lint:styles": "stylelint '**/*.{css,scss}' --report-needless-disables --report-invalid-scope-disables",
     "sync": "carbon-cli sync",
     "test": "cross-env BABEL_ENV=test jest",
     "test:e2e": "cross-env BABEL_ENV=test jest --testPathPattern=e2e --testPathIgnorePatterns='examples,/packages/components/,/packages/react/'"
@@ -71,7 +71,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "rimraf": "^3.0.0",
-    "stylelint": "^13.0.0"
+    "stylelint": "^13.6.0"
   },
   "husky": {
     "hooks": {
@@ -123,8 +123,9 @@
       "eslint",
       "git add"
     ],
-    "packages/components/**/*.scss": [
+    "**/*.scss": [
       "prettier --write",
+      "stylelint --report-needless-disables --report-invalid-scope-disables --allow-empty-input",
       "git add"
     ],
     "!(*sass).md": [
@@ -140,7 +141,7 @@
   },
   "stylelint": {
     "extends": [
-      "./packages/stylelint-config-elements"
+      "./packages/stylelint-config-carbon"
     ]
   },
   "jest": {
