--- a/.stylelintignore
+++ b/.stylelintignore
@@ -9,5 +9,11 @@
 **/packages/elements/scss/**/*.scss
 **/packages/themes/**/*.scss
 
-# Components
-**/packages/components/**
+# packages/components
+packages/components/demo/**
+packages/components/tests/**
+packages/components/css/**
+packages/components/scss/**
+
+# packages/react
+packages/react/storybook-static/**
